<resources>

    <string name="app_name">云缴费</string>
    <string name="verification_code">验证码</string>
    <string name="input_password">请输入密码</string>
    <string name="get_verification_code">获取验证码</string>
    <string name="pwd_prompt">密码长度6–20位</string>
    <string name="phone_prompt">请输入手机号码</string>
    <string name="user_agreement">用户协议</string>

    <string name="pay_cost_company">缴费单位</string>
    <string name="pay_account">缴费户号</string>
    <string name="hint_input_pay_account">请输入缴费户号</string>
    <string name="input_account_help">如何查户号</string>
    <string name="input_account_alert">目前仅支持物联网表缴费</string>
    <string name="read_and_agree">我已阅读并同意</string>
    <string name="protocol_title">《云缴费用户协议》</string>
    <string name="confirm_account">账户信息</string>
    <string name="company_select">选择燃气集团</string>
    <string name="close">关闭</string>
    <string name="user_name">用户姓名</string>
    <string name="address_msg">地址信息</string>
    <string name="account_balance">账户余额</string>
    <string name="confirm">确认</string>
    <string name="activity_title_add_new_account">新增充值账户</string>
    <string name="activity_title_new_account_success">添加成功</string>
    <string name="activity_title_address_select">选择燃气公司</string>
    <string name="activity_title_payments">燃气充值</string>
    <string name="activity_title_payments_history">充值记录</string>
    <string name="tab_home">首页</string>
    <string name="tab_my">我的</string>
    <string name="cancel">取消</string>
    <string name="search">搜索</string>
    <string name="add_account_success">账户添加成功</string>
    <string name="to_payments">去充值</string>
    <string name="no_payments">暂不充值</string>
    <string name="payments_alert_msg">目前仅支持物联表及NFC卡表充值</string>
    <string name="account_name">用户名</string>
    <string name="payments_account">缴费户号</string>
    <string name="account_funds">账户余额</string>
    <string name="payments_amount">充值金额</string>
    <string name="rmb_100">100元</string>
    <string name="rmb_300">300元</string>
    <string name="rmb_800">800元</string>
    <string name="custom_amount">自定义金额</string>
    <string name="input_amount_hint">请输入充值金额大于0元</string>
    <string name="rmb_unit">元</string>
    <string name="pay_type">支付方式</string>
    <string name="wx_pay">微信支付</string>
    <string name="ali_pay">支付宝支付</string>
    <string name="immediately_payments">立即充值</string>
    <string name="payments_history">充值记录</string>
    <string name="iot_card">物联网卡</string>
    <string name="pay_state">交易状态</string>
    <string name="account_num">缴费账户</string>
    <string name="pay_mode">支付方式</string>
    <string name="pay_time">缴费时间</string>
    <string name="no_history">暂无记录</string>
    <string name="no_data">暂无数据</string>
    <string name="nb_recharge_history">NB表充值记录</string>
    <string name="contact_customer_service">联系客服</string>
    <string name="logout">退出登录</string>
    <string name="payment_success">充值成功</string>
    <string name="to_payments_history">查看充值记录</string>
    <string name="back_to_main">返回首页</string>
    <string name="payment_failed">充值失败</string>
    <string name="payment_again">继续充值</string>
    <string name="trading_statue">交易状态</string>
    <string name="payment_account">缴费账户</string>
    <string name="payment_type">付款方式</string>
    <string name="payment_time">缴费时间</string>
    <string name="loading">加载中...</string>
    <string name="hint_input_city_search">输入城市名/拼音或者字母查询</string>

    <string name="no_company_in_city">该城市暂未开通燃气缴费服务\n请重新选择城市</string>
    <string name="i_know_it">我知道了</string>
    <string name="commit">提交</string>
    <string name="binding_phone">绑定手机号</string>
    <string name="retrieve_password">找回密码</string>
    <string name="complete">完成</string>
    <string name="agreement_prompt">点击注册即表示接受云缴费的</string>
    <string name="register">注册</string>
    <string name="reset_password">重置密码</string>
    <string name="recharge">充值</string>
    <string name="login_verification_code">验证码登录</string>
    <string name="login_password">密码登录</string>
    <string name="about">关于我们</string>
    <string name="copyright_notice">新奥阳光易采科技有限公司版权所有</string>
    <string name="welcome_prompt">缴费一站式服务平台</string>


    <string name="nfc_recharge_history">NFC卡表充值记录</string>
    <string name="payments_gas_amount">充值气量</string>
    <string name="gas_50">50方</string>
    <string name="gas_100">100方</string>
    <string name="gas_200">200方</string>
    <string name="input_gas_amount_hint">请输入充值气量大于10方</string>
    <string name="payment_amount_name">充值金额</string>
    <string name="immediately_nfc_payments">确认支付</string>
    <string name="custom_gasp">自定义气量</string>
    <string name="gas_unit">方</string>
</resources>
