<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <ImageView
        android:id="@+id/btn_back"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:padding="15dp"
        android:src="@mipmap/back" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="50dp"
        android:layout_marginTop="30dp"
        android:text="@string/binding_phone"
        android:textColor="@color/text_color"
        android:textSize="28sp" />

    <EditText
        android:id="@+id/edit_binding_phone"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="50dp"
        android:layout_marginRight="50dp"
        android:layout_marginTop="10dp"
        android:background="@drawable/et_underline"
        android:hint="@string/phone_prompt"
        android:inputType="number"
        android:maxLines="1"
        android:paddingBottom="13dp"
        android:paddingTop="13dp"
        android:textColor="@color/text_color"
        android:textColorHint="@color/text_hint_color"
        android:textSize="14sp" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="50dp"
        android:layout_marginRight="50dp"
        android:layout_marginTop="10dp"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <EditText
                android:id="@+id/edit_binding_code"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:background="@null"
                android:hint="@string/verification_code"
                android:inputType="number"
                android:maxLength="6"
                android:maxLines="1"
                android:paddingBottom="13dp"
                android:paddingTop="13dp"
                android:textColor="@color/text_color"
                android:textColorHint="@color/text_hint_color"
                android:textSize="14sp" />

            <TextView
                android:id="@+id/btn_binding_code"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:enabled="false"
                android:paddingBottom="13dp"
                android:paddingTop="13dp"
                android:text="@string/get_verification_code"
                android:textColor="@color/text_gray_color" />

        </LinearLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="0.5dp"
            android:background="@drawable/et_underline" />

    </LinearLayout>


    <Button
        android:id="@+id/btn_binding_confirm"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="50dp"
        android:layout_marginRight="50dp"
        android:layout_marginTop="51dp"
        android:background="@drawable/shape_stroke_bg_gray"
        android:enabled="false"
        android:gravity="center"
        android:text="@string/complete"
        android:textColor="@color/white"
        android:textSize="16sp"
        android:textStyle="bold" />

</LinearLayout>