<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".modular.payments.activity.PaymentsActivity">

    <include layout="@layout/include_activity_header" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="30dp"
        android:background="@color/bg_red"
        android:gravity="center_vertical"
        android:paddingEnd="16dp"
        android:paddingStart="16dp"
        android:text="@string/payments_alert_msg"
        android:textColor="@color/text_color_red"
        android:textSize="@dimen/ts_note" />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:focusable="true"
        android:focusableInTouchMode="true"
        android:scrollbars="none">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginEnd="20dp"
                android:layout_marginStart="20dp"
                android:layout_marginTop="16dp"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:gravity="center_vertical"
                    android:text="@string/account_name"
                    android:textColor="@color/text_color"
                    android:textSize="@dimen/ts_content" />

                <TextView
                    android:id="@+id/user_name"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:ellipsize="end"
                    android:gravity="center_vertical|end"
                    android:lines="1"
                    android:textColor="@color/text_color"
                    android:textSize="@dimen/ts_content" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginEnd="20dp"
                android:layout_marginStart="20dp"
                android:layout_marginTop="16dp"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:gravity="center_vertical"
                    android:text="@string/payments_account"
                    android:textColor="@color/text_color"
                    android:textSize="@dimen/ts_content" />

                <TextView
                    android:id="@+id/user_account"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:ellipsize="end"
                    android:gravity="center_vertical|end"
                    android:lines="1"
                    android:textColor="@color/text_color"
                    android:textSize="@dimen/ts_content" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginEnd="20dp"
                android:layout_marginStart="20dp"
                android:layout_marginTop="16dp"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:gravity="center_vertical"
                    android:text="@string/address_msg"
                    android:textColor="@color/text_color"
                    android:textSize="@dimen/ts_content" />

                <TextView
                    android:id="@+id/address"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:ellipsize="end"
                    android:gravity="center_vertical|end"
                    android:lines="1"
                    android:textColor="@color/text_color"
                    android:textSize="@dimen/ts_content" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                    android:layout_marginEnd="20dp"
                android:layout_marginStart="20dp"
                android:layout_marginTop="16dp"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:gravity="center_vertical"
                    android:text="@string/account_funds"
                    android:textColor="@color/text_color"
                    android:textSize="@dimen/ts_content" />

                <TextView
                    android:id="@+id/account_balance"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:ellipsize="end"
                    android:gravity="center_vertical|end"
                    android:lines="1"
                    android:textColor="@color/text_color"
                    android:textSize="@dimen/ts_content" />
            </LinearLayout>

            <View
                style="@style/div_horizontal"
                android:layout_height="10dp"
                android:layout_marginTop="16dp"
                android:background="@color/div_wide" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="16dp"
                android:layout_marginStart="16dp"
                android:layout_marginTop="16dp"
                android:text="@string/payments_amount"
                android:textColor="@color/text_gray_dark_color"
                android:textSize="@dimen/ts_content" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginEnd="20dp"
                android:layout_marginStart="20dp"
                android:layout_marginTop="16dp"
                android:orientation="horizontal">

                <CheckBox
                    android:id="@+id/selector_rmb100"
                    android:layout_width="0dp"
                    android:layout_height="40dp"
                    android:layout_weight="1"
                    android:background="@drawable/selector_stroke_gray_green"
                    android:button="@null"
                    android:checked="false"
                    android:gravity="center"
                    android:tag="100"
                    android:text="@string/rmb_100"
                    android:textColor="@color/selector_black_green"
                    android:textSize="@dimen/ts_btn" />

                <CheckBox
                    android:id="@+id/selector_rmb300"
                    android:layout_width="0dp"
                    android:layout_height="40dp"
                    android:layout_marginEnd="6dp"
                    android:layout_marginStart="6dp"
                    android:layout_weight="1"
                    android:background="@drawable/selector_stroke_gray_green"
                    android:button="@null"
                    android:checked="false"
                    android:gravity="center"
                    android:tag="300"
                    android:text="@string/rmb_300"
                    android:textColor="@color/selector_black_green"
                    android:textSize="@dimen/ts_btn" />

                <CheckBox
                    android:id="@+id/selector_rmb800"
                    android:layout_width="0dp"
                    android:layout_height="40dp"
                    android:layout_weight="1"
                    android:background="@drawable/selector_stroke_gray_green"
                    android:button="@null"
                    android:checked="false"
                    android:gravity="center"
                    android:tag="800"
                    android:text="@string/rmb_800"
                    android:textColor="@color/selector_black_green"
                    android:textSize="@dimen/ts_btn" />
            </LinearLayout>

            <LinearLayout
                android:id="@+id/input_layout"
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:layout_marginEnd="20dp"
                android:layout_marginStart="20dp"
                android:layout_marginTop="8dp"
                android:background="@drawable/shape_stroke_gray"
                android:focusable="true"
                android:focusableInTouchMode="true"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:gravity="center"
                    android:paddingEnd="10dp"
                    android:paddingStart="10dp"
                    android:text="@string/custom_amount"
                    android:textColor="@color/text_color"
                    android:textColorHint="@color/text_hint_color"
                    android:textSize="@dimen/ts_content" />

                <EditText
                    android:id="@+id/input_amount"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:background="@color/transparent"
                    android:focusable="true"
                    android:focusableInTouchMode="true"
                    android:gravity="center_vertical|end"
                    android:hint="@string/input_amount_hint"
                    android:inputType="numberDecimal"
                    android:lines="1"
                    android:textColor="@color/text_color"
                    android:textColorHint="@color/text_hint_color"
                    android:textSize="@dimen/ts_content" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:gravity="center"
                    android:paddingEnd="10dp"
                    android:paddingStart="10dp"
                    android:text="@string/rmb_unit"
                    android:textColor="@color/text_color"
                    android:textSize="@dimen/ts_content" />

            </LinearLayout>

            <View
                style="@style/div_horizontal"
                android:layout_height="10dp"
                android:layout_marginTop="16dp"
                android:background="@color/div_wide" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="16dp"
                android:layout_marginStart="16dp"
                android:layout_marginTop="16dp"
                android:text="@string/pay_type"
                android:textColor="@color/text_gray_dark_color"
                android:textSize="@dimen/ts_content" />

            <LinearLayout
                android:id="@+id/wx_pay"
                android:layout_width="match_parent"
                android:layout_height="55dp"
                android:orientation="horizontal"
                android:paddingEnd="20dp"
                android:paddingStart="20dp">

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:drawablePadding="10dp"
                    android:drawableLeft="@mipmap/icon_wx_pay"
                    android:gravity="center_vertical"
                    android:includeFontPadding="false"
                    android:text="@string/wx_pay" />

                <ImageView
                    android:id="@+id/wx_pay_select"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:src="@mipmap/icon_item_selector"
                    android:visibility="gone" />

            </LinearLayout>

            <View
                style="@style/div_horizontal"
                android:layout_marginEnd="20dp"
                android:layout_marginStart="20dp"
                android:background="@color/div_wide" />

            <LinearLayout
                android:id="@+id/ali_pay"
                android:layout_width="match_parent"
                android:layout_height="55dp"
                android:orientation="horizontal"
                android:paddingEnd="20dp"
                android:paddingStart="20dp">

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:drawablePadding="10dp"
                    android:drawableLeft="@mipmap/icon_ali_pay"
                    android:gravity="center_vertical"
                    android:includeFontPadding="false"
                    android:text="@string/ali_pay" />

                <ImageView
                    android:id="@+id/ali_pay_select"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:src="@mipmap/icon_item_selector"
                    android:visibility="gone" />

            </LinearLayout>

            <View
                style="@style/div_horizontal"
                android:layout_marginEnd="20dp"
                android:layout_marginStart="20dp" />

            <TextView
                android:id="@+id/payments"
                android:layout_width="275dp"
                android:layout_height="46dp"
                android:layout_marginTop="18dp"
                android:layout_marginBottom="18dp"
                android:layout_gravity="center_horizontal"
                android:background="@drawable/shape_stroke_bg_blue"
                android:gravity="center"
                android:text="@string/immediately_payments"
                android:textColor="@color/white"
                android:textSize="@dimen/ts_btn"
                android:textStyle="bold" />

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginBottom="10dp"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/payments_history"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:gravity="end"
                    android:paddingLeft="10dp"
                    android:paddingRight="10dp"
                    android:text="@string/payments_history"
                    android:textColor="@color/text_green_color"
                    android:textSize="@dimen/ts_content" />


                <TextView
                    android:id="@+id/contact_service"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:paddingLeft="10dp"
                    android:paddingRight="10dp"
                    android:text="@string/contact_customer_service"
                    android:textColor="@color/text_green_color"
                    android:textSize="@dimen/ts_content"
                    android:visibility="gone" />
            </LinearLayout>
        </LinearLayout>
    </ScrollView>
</LinearLayout>